fixing some bug

--- a/src/app/prediction-page/prediction-page.component.html
+++ b/src/app/prediction-page/prediction-page.component.html
@@ -97,7 +97,7 @@
 
             <label class="form-control w-full mb-3">
               <div class="label">
-                <span class="label-text">Estimated Salary</span>
+                <span class="label-text">Estimated Salary in a Year</span>
               </div>
               <input type="number" formControlName="estimatedSalary" placeholder="0" class="input input-bordered w-full"/>
             </label>
