changing home interface

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,15 +3,18 @@
   <div class="hero-content text-center text-neutral-content">
     <div class="max-w-md">
       <h1 class="mb-5 text-5xl font-bold">Kelompok 4 Machine Learning</h1>
-      <div class="mb-5">Anggota Kelompok :
-        Riris Iyut Roito Siregar
-        Tesalonika Aprisda Sitopu
-        Gabriel Cesar Hutagalung
-        Dea Yova Septri Saragih
-        Agustina Butar-Butar
-        Intan Sianipar
-        Nicholas Hutabarat
-        Gerry Benyamin Bukit
+      <div class="mb-5">
+        <div class="text-xl font-bold mb-2">Anggota Kelompok :</div>
+        <div>
+          Riris Iyut Roito Siregar <br>
+          Tesalonika Aprisda Sitopu <br>
+          Gabriel Cesar Hutagalung <br>
+          Dea Yova Septri Saragih <br>
+          Agustina Butar-Butar <br>
+          Intan Sianipar <br>
+          Nicholas Hutabarat <br>
+          Gerry Benyamin Bukit
+        </div>
       </div>
       <a routerLink="/generate" class="btn btn-primary">Get Started</a>
     </div>
